--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
     "concurrently": "^3.5.1",
+    "dompurify": "^2.0.7",
     "express": "^4.16.2",
+    "jsdom": "^15.2.1",
     "moment": "^2.24.0",
     "mysql": "^2.17.1",
     "react-router-dom": "^5.1.2"
